--- a/TMS/TMS/Views/FAQ/Index.cshtml
+++ b/TMS/TMS/Views/FAQ/Index.cshtml
@@ -61,39 +61,39 @@
             loadFAQ();
         });
 
-        var loadFAQ = function () {
+        var loadFAQ = function (id) {
             $.ajax({
                 url: "/FAQ/GetFAQ",
                 type: "GET",
+                data: { id: id },
                 success: function (data) {
+                    $('#all-articles').empty();
                     if (data.data.length == 0) {
-                        $(".question-list").append("<div class='col-sm-12' style='text-align:center'><p>There is no solution to display. </p></div>");
+                        $("#all-articles").append("<p style='text-align: center'><i>There is no solution to display.</i></p>");
                     } else {
                         for (i = 0; i < data.data.length; i++) {
                             var content = data.data[i].Content;
                             content = $.truncate(content, {
                                 length: 350,
                             });
+                            var id = data.data[i].ID
                             $('#all-articles').append(
                                 '<article class="type-post format-standard hentry clearfix">'
-                                + '<h1 class="post-title"><a href="/KnowledgeBase/Detail/' + data.data[i].Name + '">' + data.data[i].Subject + '</a></h1>'
+                                + '<h1 class="post-title"><a href="/KnowledgeBase/Detail/' + id + '">' + data.data[i].Subject + '</a></h1>'
                                 + '<div class="post-meta clearfix">'
                                 + '<span class="date">' + formatDateTime(new Date(parseInt(data.data[i].ModifiedTime.substr(6)))) + '</span>'
-                                + '<span class="category"><a class="link-color" href="#">' + data.data[i].CategoryPath + '</a></span></div>'
-                                + '<p class="longContent">' + content + '...<a class="link-color" href="/KnowledgeBase/Detail/' + data.data[i].ID + '"> Continue reading</a></p>'
+                                + '<span class="category" id=' + data.data[i].CategoryID + '><a class="link-color" href="#">' + data.data[i].CategoryPath + '</a></span></div>'
+                                + '<p class="longContent">' + content + '<a class="link-color" href="/KnowledgeBase/Detail/' + id + '"> Continue reading</a></p>'
                                 + '<p><i>Keyword: ' + data.data[i].Keyword + '</i></p></article>');
-
-                            
                         }
                     }
                 }
             });
         }
 
-
-        var loadSolutionByCategory = function (id) {
-
-        }
+        $("#all-articles").on("click", ".category", function () {
+            loadFAQ($(this).attr("id"));
+        });
 
         var showTreeViewModal = function () {
             $("#category-treeview-div").jstree({
@@ -140,7 +140,8 @@
         };
 
         $('#category-treeview-div').on("select_node.jstree", function (e, data) {
-            window.location.href = data.node.a_attr.href;
+            //window.location.href = data.node.a_attr.href;
+            loadFAQ(data.node.id);
         });
     </script>
 }
