--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
@@ -68,7 +68,7 @@
                             </div>
                             <div class="col-md-12 col-xs-12">
                                 <input class="form-control" type="file" id="descriptionFiles" name="descriptionFiles" multiple>
-                                <div style="height: 20px; display: inline-block; margin-top: 5px;">
+                                <div style="height: auto; margin-top: 5px;">
                                     @for (int i = 0; i < Model.DescriptionAttachments.Count; i++)
                                     {
                                         <div class="attachment-div" style="display: inline;">
