--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -301,7 +301,7 @@
             <div class="modal-body" style="background-color: #ecf0f5; height: 500px; overflow-y: auto;">
                 <a style="padding: 10px;">
                     <div class="input-group">
-                        <input type="text" id="solution-search" placeholder="Type something ..." class="form-control">
+                        <input type="text" id="solution-search" placeholder="Keyword..." class="form-control">
                         <span class="input-group-btn">
                             <button type="button" id="search-btn" class="btn btn-warning btn-flat">Search</button>
                         </span>
