--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -12,6 +12,11 @@
     .select2-container {
         width: 100% !important;
     }
+
+    #ticket-attachments a {
+        margin: 2px 2px 2px 0px;
+        display: inline-block;
+    }
 </style>
 
 @section SidebarMenu {
@@ -266,7 +271,7 @@
                                         <div class="col-sm-2 labels">
                                             <b>Description: </b>
                                         </div>
-                                        <div class="col-sm-10 pre-wrap" id="ticket-description" style="padding-left: 10px"></div>
+                                        <div class="col-sm-10" style="padding-left: 10px"><span class="pre-wrap" id="ticket-description"></span></div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 row-content ">
@@ -274,7 +279,7 @@
                                         <div class="col-sm-2 labels">
                                             <b>Solution: </b>
                                         </div>
-                                        <div class="col-sm-10 pre-wrap" id="ticket-solution" style="padding-left: 10px"></div>
+                                        <div class="col-sm-10" style="padding-left: 10px"><span class="pre-wrap" id="ticket-solution"></span></div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 row-content ">
@@ -282,7 +287,7 @@
                                         <div class="col-sm-2 labels">
                                             <b>Attachment: </b>
                                         </div>
-                                        <div class="col-sm-10"><span id="ticket-attachment"></span></div>
+                                        <div class="col-sm-10" id="ticket-attachments"></div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 row-content">
