--- a/TMS/TMS/Views/FAQ/Index.cshtml
+++ b/TMS/TMS/Views/FAQ/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model TMS.ViewModels.KnowledgeBaseViewModels
+﻿@model TMS.ViewModels.KnowledgeBaseViewModel
 @{
     Layout = "~/Views/Shared/KBLayout.cshtml";
     var relatedSolution = ViewBag.relatedSolution;
