--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -329,23 +329,44 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a class="btn btn-primary btn-flat" data-role="modal-btn-solve">Solve</a>
+                    <div class="btn-group dropup" id="action-div">
+                        <button type="button" class="btn bg-olive btn-flat dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Action <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a id="action-edit-btn">
+                                    <i class="fa fa-pencil" aria-hidden="true"></i> Edit Ticket
+                                </a>
+                            </li>
+                            <li>
+                                <a id="action-solve-btn">
+                                    <i class="fa fa-commenting" aria-hidden="true"></i> Solve Ticket
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)" data-role="btn-show-cancel-modal" id="action-cancel-btn">
+                                    <i class="fa fa-ban" aria-hidden="true"></i> Cancel Ticket
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     <div class="btn-group dropup" id="reopen-div">
                         <button type="button" class="btn bg-olive btn-flat dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Reopen <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="javascript:void(0)" data-role="btn-show-close-modal" id="reopen-close-btn">
+                                <a href="javascript:void(0)" onclick="showCloseModal(this)" id="reopen-close-btn">
                                     <i class="fa fa-times-circle" aria-hidden="true"></i> Close Ticket
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0)" data-role="btn-show-reassign-modal" id="reopen-reassign-btn">
+                                <a href="javascript:void(0)" onclick="showReassignModal(this)" id="reopen-reassign-btn">
                                     <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> Reassign
                                 </a>
                             </li>
-                            <li><a href="#" id="reopen-resolve-btn"><i class="fa fa-commenting" aria-hidden="true"></i> Re-solve Ticket</a></li>
+                            <li><a id="reopen-resolve-btn"><i class="fa fa-commenting" aria-hidden="true"></i> Re-solve Ticket</a></li>
                         </ul>
                     </div>
                     <button type="button" class="btn btn-default btn-flat" data-dismiss="modal">Close</button>
