--- a/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
@@ -36,7 +36,7 @@
                 <div class="form-group">
                     <label class="control-label col-md-2">Subject&nbsp;<span class="required">*</span></label>
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Subject, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => m.Subject, new { @class = "form-control", id="subject-txt"})
                         @Html.ValidationMessageFor(m => m.Subject, "", new { @class = "text-danger" })
                     </div>
                 </div>
