Update FAQ with tagit

--- a/TMS/TMS/Views/FAQ/Index.cshtml
+++ b/TMS/TMS/Views/FAQ/Index.cshtml
@@ -5,8 +5,13 @@
 }
 @using TMS.Models;
 <link rel="stylesheet" href="~/Content/Plugins/jstree/style.min.css" />
+<link rel="stylesheet" href="~/Content/Plugins/tagit/jquery.tagit.css" />
 
 <style>
+    .post-title {
+        font-size: 30px !important;
+    }
+
     .category-item li {
         background: none;
     }
@@ -62,9 +67,9 @@
             border-right: none;
         }
 
-        .holder a:last-of-type {
-            border-right: solid 1px #bfbfbf;
-        }
+            .holder a:last-of-type {
+                border-right: solid 1px #bfbfbf;
+            }
 
             .holder a:hover {
                 color: #fff;
@@ -94,11 +99,34 @@
             border: solid 1px #bfbfbf;
             border-right: none;
         }
+
+    .keywords {
+        margin-left: 0px;
+        margin-bottom: 35px;
+        float: left;
+        list-style: none;
+    }
+
+        .keywords li {
+            float: left;
+            display: inline-block;
+            margin-right: 1em;
+        }
+
+    .key-tags {
+        position: relative;
+        height: 30px;
+        line-height: 30px;
+        padding: 0 15px;
+        background-color: #e6e6e6;
+        border-left: solid 5px #3393d8;
+        color: #191919;
+    }
 </style>
 
 <div class="col-lg-12">
     <div class="span8 page-content">
-        <div style="padding-left: 25px"><h2 id="main-title"></h2></div>
+        <div style="padding-left: 25px"><h1 id="main-title"></h1></div>
         <ul id="all-articles"></ul>
         <div class="holder"></div>
     </div>
@@ -117,57 +145,6 @@
         $(document).ready(function () {
             showTreeViewModal();
             loadFAQ();
-        });
-
-        var loadFAQ = function (id, categoryName) {
-            $.ajax({
-                url: "/FAQ/GetFAQ",
-                type: "GET",
-                data: { id: id },
-                success: function (data) {
-                    $('#all-articles').empty();
-                    if (id == null) {
-                        $("#main-title").text("All articles");
-                    } else {
-                        $("#main-title").text("Category: " + categoryName);
-                    }
-                    if (data.data.length == 0) {
-                        $("#all-articles").append("<p style='text-align: center'><i>There is no solution to display.</i></p>");
-                    } else {
-                        for (i = 0; i < data.data.length; i++) {
-                            var content = data.data[i].Content;
-                            content = $.truncate(content, {
-                                length: 350,
-                            });
-                            var sId = data.data[i].ID
-                            $('#all-articles').append(
-                                '<li><article class="type-post format-standard hentry clearfix">'
-                                + '<h3 class="post-title"><a href="/FAQ/Detail?Path=' + data.data[i].Path + '">' + data.data[i].Subject + '</a></h3>'
-                                + '<div class="post-meta clearfix">'
-                                + '<span class="date">' + formatDateTime(new Date(parseInt(data.data[i].ModifiedTime.substr(6)))) + '</span>'
-                                + '<span class="category" id=' + data.data[i].CategoryID + ' data-id=' + data.data[i].Category + '><a class="link-color" href="#">' + data.data[i].CategoryPath + '</a></span></div>'
-                                + '<p class="longContent">' + content + '</p><a class="link-color" href="/FAQ/Detail/' + sId + '"> Continue reading</a><br/><br/>'
-                                + '<p><i>Keyword: ' + data.data[i].Keyword + '</i></p></article></li>');
-                        }
-                        $('div.holder').jPages({
-                            containerID: "all-articles",
-                            perPage: 5,
-                            startPage: 1,
-                            startRange: 1,
-                            midRange: 2,
-                            endRange: 1,
-                            first: "First",
-                            last: "Last",
-                            previous: "Previous",
-                            next: "Next",
-                        });
-                    }
-                }
-            });
-        }
-
-        $("#all-articles").on("click", ".category", function () {
-            loadFAQ($(this).attr("id"), $(this).attr("data-id"));
         });
 
         var showTreeViewModal = function () {
@@ -213,6 +190,65 @@
                 },
             });
         };
+
+        var loadFAQ = function (id, categoryName) {
+            $.ajax({
+                url: "/FAQ/GetFAQ",
+                type: "GET",
+                data: { id: id },
+                success: function (data) {
+                    $('#all-articles').empty();
+                    if (id == null) {
+                        $("#main-title").text("All articles");
+                    } else {
+                        $("#main-title").text("Category: " + categoryName);
+                    }
+                    if (data.data.length == 0) {
+                        $("#all-articles").append("<p style='text-align: center'><i>There is no solution to display.</i></p>");
+                    } else {
+                        for (i = 0; i < data.data.length; i++) {
+                            var content = data.data[i].Content;
+                            content = $.truncate(content, {
+                                length: 350,
+                            });
+                            var sId = data.data[i].ID;
+                            var keywordTags = (data.data[i].Keyword).split(',');
+                            $('#all-articles').append(
+                                '<li><article class="type-post format-standard hentry clearfix">'
+                                + '<br/><h2 class="post-title"><a href="/FAQ/Detail?Path=' + data.data[i].Path + '">' + data.data[i].Subject + '</a></h2>'
+                                + '<div class="post-meta clearfix">'
+                                + '<span class="date">' + formatDateTime(new Date(parseInt(data.data[i].ModifiedTime.substr(6)))) + '</span>'
+                                + '<span class="category" id=' + data.data[i].CategoryID + ' data-id=' + data.data[i].Category + '><a class="link-color" href="#">' + data.data[i].CategoryPath + '</a></span></div>'
+                                + '<p class="longContent">' + content + '</p><a class="link-color" href="/FAQ/Detail/' + sId + '"> Continue reading</a>'
+                                + '<p><ul class="keywords" id="keyword' + sId + '"></ul></p></article></li>');
+                            $("#keyword" + sId).empty();
+                            for (j = 0; j < keywordTags.length; j++) {
+                                var key = keywordTags[j].replace(/"/g, '');
+                                $("#keyword" + sId).append("<li><div class='key-tags'><span>" + key + "<span><div></li>");
+                            }
+                        }
+                        $('div.holder').jPages({
+                            containerID: "all-articles",
+                            perPage: 5,
+                            startPage: 1,
+                            startRange: 1,
+                            midRange: 2,
+                            endRange: 1,
+                            first: "First",
+                            last: "Last",
+                            previous: "Previous",
+                            next: "Next",
+                        });
+                        $("#all-articles").find('img').hide();
+                    }
+                }
+            });
+        }
+
+        $("#all-articles").on("click", ".category", function () {
+            loadFAQ($(this).attr("id"), $(this).attr("data-id"));
+        });
+
 
         $('#category-treeview-div').on("select_node.jstree", function (e, data) {
             //window.location.href = data.node.a_attr.href;
