--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -148,7 +148,7 @@
                             <i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp; New solution
                         </a>
                         <a href="javascript:void(0)" class="btn btn-flat btn-primary" onclick="showSimilarTicketFrequencyModal();">Similar ticket frequency</a>
-                        <a class="btn btn-default" href="#"><i class="fa fa-trash"></i></a>
+                        <a class="btn btn-default btn-flat" href="#"><i class="fa fa-trash"></i></a>
                     </div>
                     <div class="box-tools pull-right col-md-4">
                         <div class="has-feedback">
@@ -255,7 +255,6 @@
                 }
             });
             $('#create-solution-form textarea').wysihtml5();
-
         });
 
         var showTreeViewModal = function () {
@@ -318,15 +317,15 @@
                             content = $.truncate(content, {
                                 length: 350,
                             });
-                            
                             $(".question-list").append(
-                                '<div class="question-row"><div class="question-header col-sm-10"><input type="checkbox" />'
+                                '<div class="question-row"><div class="question-header col-lg-10"><input type="checkbox" />'
                                 + '<a class="question-title" href="#"> ' + data.data[i].Subject + '</a></div>'
-                                + '<div class="col-sm-2 button"><a class="btn-sm btn-success" href="/FAQ/Detail?Path=' + data.data[i].Path + '"><i class="fa fa-eye"></i></a>'
+                                + '<div class="col-lg-2 button"><a class="btn-sm btn-success" href="/FAQ/Detail?Path=' + data.data[i].Path + '"><i class="fa fa-eye"></i></a>'
                                 + '&nbsp;&nbsp;<a class="btn-sm btn-primary" href="/KnowledgeBase/Edit/' + data.data[i].ID + '"><i class="fa fa-pencil"></i></a></div>'
                                 + '<div class="question-detail col-sm-12">' + content
                                 + '<a href="/FAQ/Detail?Path=' + data.data[i].Path + '">...Continue Reading</a>'
                                 + '<p><i>Keyword: ' + data.data[i].Keyword + '</i></p></div></div>');
+                            $(".question-list").find('img').hide();
                         }
                     }
                 },
@@ -368,6 +367,7 @@
                                 + '<div class="question-detail col-sm-12">' + content
                                 + '<a href="/FAQ/Detail?Path=' + data.data[i].Path + '">...Continue Reading</a>'
                                 + '<p><i>Keyword: ' + data.data[i].Keyword + '</i></p></div></div>');
+                            $(".question-list").find('img').hide();
                         }
                     }
                 },
